--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
               - Mentor beginning developers in Python, Ruby, Node, and Front-End technologies.
               - Most importantly, I love Node. 
               - Been working with Node/Express for about 6 months.
+              ## Richard Lucas: About
+              - Full-stack developer for Jones eGlobal in Denver
+              - Works with Node.js, JavaScript on a daily basis creating and maintaining web applications
+              - Loves all that is Node and the related ecosystem
+              - Enjoys the great tech community in Denver/Boulder and loves to be a part of it
             </script>
           </section>
           <section data-markdown>
