--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
               - Mentor beginning developers in Python, Ruby, Node, and Front-End technologies.
               - Most importantly, I love Node. 
               - Been working with Node/Express for about 6 months.
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
               ## Richard Lucas: About
               - Full-stack developer for Jones eGlobal in Denver
               - Works with Node.js, JavaScript on a daily basis creating and maintaining web applications
