--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
               - Twice a month. Topics will be similar.
               - Reach out to us about scheduling topics.
               - Prefer Mondays or Wednesdays?
-              - Denver Hacknight?
+              - Denver Hack night?
             </script>
           </section>
           <section data-markdown>
             <script type="text/template">
               ## Collaborative Effort
-              We welcome anyone who wants to get involed. Lead talks. Rub meetups. Anything. We will support you.
+              We welcome anyone who wants to get involved. Lead talks. Run meetups. Anything. We will support you.
             </script>
           </section>
          <section data-markdown>
             <script type="text/template">
-              ## NodeJSColoardo.com
+              ## NodeJSColorado.com
               Let's build it!
             </script>
           </section>
